# aiml

./: .gitignore  README.md  pyproject.toml
src/: dataframe_demo.py  linear_regression.py  logistic_regression_with_confusion_matrix.py
src/data_processing/: matrix_example.py  multiply_example.py
src/decision_tree/: gini_criteria.py
src/genai/: bert_transformer_contextual_embedding.py  gpt_demo.py  semantic_embedding.py
src/linear/: linear_regression.py
src/neural_networks/: cnn.py  human_text_recognition.py  long_short_term_memory.py  mlp_with_pytorch.py  multi_layer_perceptrons.py  perceptrons.py  simple_net.py
src/random_forest/: hand_written_number_reconition.py
src/support_vector_machine/: svm.py
src/unsupervised/: k_determination.py  kmeans.py
