[tool.poetry]
name = "ml-concepts"
version = "0.1.0"
description = "ML Concepts Demo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.0"
numpy = "^2.0.0"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
